criando o endpoint