@@ -1,6 +1,5 @@
 package org.piecs.Controle;
 
-
 import jakarta.ws.rs.*;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
@@ -8,7 +7,7 @@ import org.piecs.Modelo.T_PIECS_MICRO_REGIAO;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Path("T_PIECS_MICRO_REGIAO")
 public class Micro_RegiaoResource {
@@ -19,33 +18,34 @@ public class Micro_RegiaoResource {
     @Produces(MediaType.APPLICATION_JSON)
     @Path("page/{page}")
     public Response getMicro_Regiao(
-        @PathParam("page") int pages,
-        @QueryParam("pageSize") int pageSize)
-    {
+            @PathParam("page") int pages,
+            @QueryParam("pageSize") int pageSize) {
+
         List<T_PIECS_MICRO_REGIAO> microRegioes = micro_regioes.stream()
-            .skip((pages - 1) * pageSize)
-            .limit(pageSize)
-            .toList();
+                .skip((pages - 1) * pageSize)
+                .limit(pageSize)
+                .collect(Collectors.toList());
+
         return Response.ok(microRegioes).build();
     }
-
 
     @GET
     @Produces(MediaType.APPLICATION_JSON)
     @Path("search")
     public List<T_PIECS_MICRO_REGIAO> searchMicro_Regiao(
             @QueryParam("Qt_placas") int qt_placas,
-            @QueryParam("Qt_baterias") int qt_baterias)
-    {
+            @QueryParam("Qt_baterias") int qt_baterias) {
+
         List<T_PIECS_MICRO_REGIAO> resultados = micro_regioes.stream()
-            .filter(micro_regiao -> micro_regiao.getQt_placa() == qt_placas && micro_regiao.getQt_bateria() == qt_baterias)
-            .toList();
+                .filter(micro_regiao -> micro_regiao.getQt_placa() == qt_placas && micro_regiao.getQt_bateria() == qt_baterias)
+                .collect(Collectors.toList());
+
         return resultados;
     }
 
     @POST
     @Consumes(MediaType.APPLICATION_JSON)
-    public Response addMicro_Regiao(Micro_Regiao novaMicro_Regiao){
+    public Response addMicro_Regiao(T_PIECS_MICRO_REGIAO novaMicro_Regiao) {
         if (novaMicro_Regiao == null) {
             return Response.status(Response.Status.BAD_REQUEST).entity("Micro Região não pode ser nula").build();
         }
@@ -53,10 +53,9 @@ public class Micro_RegiaoResource {
         return Response.status(Response.Status.CREATED).entity(novaMicro_Regiao).build();
     }
 
-
     @DELETE
     @Path("{id}")
-    public Response deleteMicro_Regiao(@PathParam("id") String id){
+    public Response deleteMicro_Regiao(@PathParam("id") String id) {
         boolean removed = micro_regioes.removeIf(micro_regiao -> micro_regiao.getId().equals(id));
         if (removed) {
             return Response.noContent().build();
@@ -64,11 +63,4 @@ public class Micro_RegiaoResource {
             return Response.status(Response.Status.NOT_FOUND).entity("Micro Região não encontrada").build();
         }
     }
-
-
-
-
-
 }
-
-
